Working on projects
Cleaned up some of the layout and created the phobia page for now. Still need to work on the blog part and other projects.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<nav class="navbar fixed-bottom navbar-dark bg-dark">
-  <div class="container">
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container text-light">
     <p class="text-center" style="margin: 20px 0;">pcameron.com</p>
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
@@ -16,10 +16,6 @@
           {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %} {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
         </ul>
