Changing rendering of projects
Made the projects grid data driven and starting working on moving more of the existing content over from the other pages.

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -34,3 +34,9 @@ body {
 .contact-list {
     list-style-type: none;
 }
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
