Adding more content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
   </div>
 
   {% include footer.html %}
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+  <script src="/scripts/bootstrap.min.js"></script>
 </body>
 
 </html>
