--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="{{ site.baseurl }}/">{{site.title}}</a>
+    <a class="navbar-brand" href="{{ site.baseurl }}/">
+      <img src="https://gravatar.com/avatar/5d22aa52b3fa53b7edec77541597712a?s=40" alt="picture" class="rounded" />
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
