--- a/_includes/projects-grid.html
+++ b/_includes/projects-grid.html
@@ -1,6 +1,11 @@
 <div class="projects-grid">
     {% for project in include.projects %}
-    <div class="card">
+    {% if project.asset-folder %}
+        {% assign c = "project-full-size" %}
+    {% else %}
+        {% assign c = "" %}
+    {% endif %}
+    <div class="card bg-light {{ c }}">
         {% if project.asset-folder %}
         <img class="card-img-top" src="/img/projects/{{ project.asset-folder }}/tile.png" />
         {% endif %}
