Fixing the project grid to display on different sizing.

--- a/_includes/projects-grid.html
+++ b/_includes/projects-grid.html
@@ -3,7 +3,7 @@
     {% if project.asset-folder %}
         {% assign c = "project-full-size" %}
     {% else %}
-        {% assign c = "" %}
+        {% assign c = "project-small-size" %}
     {% endif %}
     <div class="card bg-light {{ c }}">
         {% if project.asset-folder %}
